fixed the profile index layout problem

--- a/OnlineGameStoreSystem/wwwroot/css/pages/Profile.css
+++ b/OnlineGameStoreSystem/wwwroot/css/pages/Profile.css
@@ -276,6 +276,24 @@
     }
 }
 
+.no-review-container {
+    width: 80%;
+    align-items: flex-start; /* 顶部对齐 */
+    gap: 1rem; /* 左右间距 */
+    background-color: var(--bg-surface);
+    border-radius: var(--border-radius);
+    padding: 90px 60px;
+    box-shadow: 0 4px 20px var(--shadow-color);
+    border: 1px solid var(--border-color);
+    margin-bottom: 30px;
+    text-align: center;
+    width: 90%;   
+}
+
+    .no-review-container p {
+        color: var(--text-muted);
+    }
+
 /* Title */
 h1.Tags {
     font-size: 26px;
@@ -439,13 +457,11 @@ h1.Tags {
 }
 
 /* 整个页面左右布局 */
-.profile-page-container {
-    display: flex;
-    flex-direction: row;
+/*.profile-page-container {
     gap: 30px;
     width: 100%;
     justify-content: center;
-}
+}*/
 
 /* 左侧内容区域 */
 .profile-content {
